--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-<h1>hello brenda</h1>
-<h2>hello</h2>
-<h2>hello</h2>
+<!DOCTYPE html>
+<title>first website</title>
+<head>first website<head>
+  <body>
+    <h1>hello brend</h1>
+    <h2>hello</h2>
+    <h3>hello</<h3>
+
+
+  </body>
