--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <h1>hello brend</h1>
     <h2>hello</h2>
     <h3>hello</<h3>
+    <ul>
+      <li>fruits</li>
+      <li>mangoes</li>
+      <li>oranges</li>
+    </ul>
+
 
 
   </body>
