--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <li>mangoes</li>
       <li>oranges</li>
     </ul>
-    <P>Learn about <a href="mukindia.io.ke">food<p/>
+    <P>Learn about <a href="http://www.mukindia.io.ke"/>food<p/>
 
 
 
